# scryer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  README.md  dev-seed.example.json  dev-seed.example.toml  docker-compose.dev.yml  docker-compose.yml
crates/scryer/: .env.example  Cargo.toml  README.md  build.rs
crates/scryer-application/: Cargo.toml  README.md
crates/scryer-application/src/: acquisition_policy.rs  acquisition_policy_tests.rs  activity.rs  activity_tests.rs  app_usecase_acquisition.rs  app_usecase_acquisition_tests.rs  app_usecase_activity.rs  app_usecase_admin.rs  app_usecase_backup.rs  app_usecase_catalog.rs  app_usecase_discovery.rs  app_usecase_discovery_tests.rs  app_usecase_health.rs  app_usecase_housekeeping.rs  app_usecase_import.rs  app_usecase_import_tests.rs  app_usecase_indexer_test.rs  app_usecase_integration.rs  app_usecase_jobs.rs  app_usecase_library.rs  app_usecase_notifications.rs  app_usecase_pending.rs  app_usecase_plugins.rs  app_usecase_plugins_tests.rs  app_usecase_post_processing.rs  app_usecase_rss.rs  app_usecase_rules.rs  app_usecase_security.rs  app_usecase_settings.rs  app_usecase_subtitles.rs  app_usecase_title_images.rs  archive_extractor.rs  audio_requirements.rs  completed_download_handler.rs  delay_profile.rs  domain_events.rs  event_views.rs  facet_handler.rs  facet_movie.rs  facet_registry.rs  (+36 more)
crates/scryer-application/src/subtitles/: download.rs  language.rs  mod.rs  provider.rs  scoring.rs  search.rs  sync.rs  wanted.rs
crates/scryer-infrastructure/: Cargo.toml  README.md  build.rs
crates/scryer-infrastructure/src/: commands.rs  encryption.rs  external_import.rs  file_importer.rs  indexer_stats.rs  jwt_keys.rs  lib.rs  library_renamer.rs  library_scanner.rs  metadata_gateway.rs  migrations.rs  newznab_rate_limiter.rs  repositories.rs  smg_enrollment.rs  sqlite_services.rs  staged_nzb_store.rs  tests.rs  title_images.rs  types.rs
crates/scryer-infrastructure/src/download_clients/: mod.rs  multi_indexer.rs  nzbgeek.rs  nzbget.rs  router.rs  sabnzbd.rs  weaver.rs  weaver_subscription.rs
crates/scryer-infrastructure/src/keystore/: linux.rs  macos.rs  mod.rs  windows.rs
crates/scryer-infrastructure/src/queries/: blocklist.rs  common.rs  domain_event.rs  download_client.rs  event.rs  housekeeping.rs  indexer.rs  media_file.rs  mod.rs  notification_channel.rs  notification_subscription.rs  pending_releases.rs  plugin_installation.rs  post_processing_script.rs  quality.rs  rule_set.rs  settings.rs  subtitle.rs  title.rs  title_history.rs  user.rs  wanted.rs  workflow.rs
crates/scryer-interface/: Cargo.toml  README.md
crates/scryer-interface/src/: context.rs  lib.rs  mappers.rs  quality_profiles.rs  query.rs  settings_graph.rs  subscription.rs  types.rs  utils.rs
crates/scryer-interface/src/mutation/: backup.rs  collections.rs  config.rs  downloads.rs  external_import.rs  jobs.rs  library.rs  mod.rs  notifications.rs  plugins.rs  post_processing.rs  recycle_bin.rs  rules.rs  settings.rs  subtitle.rs  titles.rs  users.rs  wanted.rs
crates/scryer-mediainfo/: Cargo.toml
crates/scryer-mediainfo/src/: avi.rs  codec.rs  lib.rs  mkv.rs  mp4.rs  probe.rs  ts.rs  types.rs
crates/scryer-mediainfo/tests/: ffprobe_parity.rs  native_tests.rs  parse_tests.rs
crates/scryer-mediainfo/tests/fixtures/: av1_hdr10_flac.json  dual_audio_anime.json  h264_web_aac.json  hevc_dv_truehd.json  hevc_hlg.json  no_language_tags.json  no_video_streams.json
crates/scryer-mediainfo/tests/media/: av1_flac.mkv  dual_audio_subs.mkv  dv_profile5.mkv  dv_profile7.mkv  dv_profile8.mkv  h264_aac.mkv  h264_aac.ts  hevc_hdr10.mkv  hevc_hdr10plus.mkv  hevc_hlg.mkv  mpeg4_mp3.avi
crates/scryer-mock-apis/: Cargo.toml
crates/scryer-mock-apis/src/: fixtures.rs  main.rs  nzbgeek.rs  nzbget.rs  smg.rs
crates/scryer-plugins/: Cargo.toml
crates/scryer-plugins/builtins/: animetosho_indexer.wasm  dognzb_indexer.wasm  newznab_indexer.wasm  nzbgeek_indexer.wasm  torznab_indexer.wasm
crates/scryer-plugins/fixtures/test-indexer/: plugin.wasm
crates/scryer-plugins/src/: builtins.rs  download_client_adapter.rs  indexer_adapter.rs  lib.rs  loader.rs  notification_adapter.rs  types.rs
crates/scryer-plugins/tests/: wasm_integration.rs
crates/scryer-rules/: Cargo.toml
crates/scryer-rules/src/: builtins.rs  lib.rs  validation.rs
crates/scryer/src/: admin_routes.rs  base_path.rs  dev_seed.rs  init.rs  log_buffer.rs  main.rs  middleware.rs  settings_bootstrap.rs  splash.rs  ui_assets.rs
crates/scryer/src/db/migrations/: 0001_init_schema_migrations.sql  0002_settings_definitions.sql  0003_users_entitlements.sql  0004_catalog_core.sql  0005_release_policy_workflow.sql  0006_workflow_execution.sql  0007_events_scheduler.sql  0008_seed_entitlements.sql  0009_admin_bootstrap.sql  0010_critical_indexes.sql  0011_quality_profiles_defaults.sql  0012_quality_profiles_structured_defaults.sql  0013_add_download_client_priority.sql  0014_drop_settings_value_temporal_columns.sql  0015_release_download_attempts.sql  0016_imports_rename_plan_json.sql  0017_title_metadata.sql  0018_collection_episode_monitored.sql  0019_episode_overview_file_link.sql  0020_background_acquisition.sql  0021_release_download_attempts_source_password.sql  0022_push_subscriptions.sql  0023_indexer_search_modes.sql  0024_anime_episode_fields.sql  0025_collection_narrative_order.sql  0026_episode_is_recap.sql  0027_quality_profile_dual_audio.sql  0028_title_min_availability.sql  0029_rule_sets.sql  0030_indexer_config_json.sql  0031_plugin_installations.sql  0032_media_file_analysis.sql  0034_audio_streams.sql  (+37 more)
crates/scryer/tests/: integration_download.rs  integration_graphql.rs  integration_import.rs  integration_jobs.rs  integration_library_scan_progress.rs  integration_multi_indexer_urls.rs  integration_notifications.rs  integration_pending_releases.rs  integration_plugins.rs  integration_post_processing.rs  integration_rego.rs  integration_search.rs  integration_stack_probe.rs  integration_upgrade.rs
crates/scryer/tests/common/: mod.rs
(+329 files in other folders)
