[workspace]
members = [
    "crates/scryer-domain",
    "crates/scryer-application",
    "crates/scryer-infrastructure",
    "crates/scryer-interface",
    "crates/scryer-rules",
    "crates/scryer-plugins",
    "crates/scryer",
    "crates/scryer-mock-apis",
    "crates/scryer-mediainfo",
]
exclude = ["test-plugins/test-indexer"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
async-graphql = { version = "7.0", features = ["chrono"] }
jsonwebtoken = "9"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
# SQLite is compiled in via sqlx-sqlite -> libsqlite3-sys bundled mode for single-executable
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "json", "macros", "migrate"] }
sha2 = "0.10"
argon2 = "0.5"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem", "arithmetic"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
extism = "1.13"
semver = "1"
wiremock = "0.6"
