[workspace]
members = [
    "crates/scryer-domain",
    "crates/scryer-application",
    "crates/scryer-release-parser",
    "crates/scryer-infrastructure",
    "crates/scryer-interface",
    "crates/scryer-rules",
    "crates/scryer-plugins",
    "crates/scryer",
    "crates/scryer-mock-apis",
    "crates/scryer-mediainfo",
]
exclude = ["test-plugins/test-indexer"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
dotenvy = "0.15"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
async-graphql = { version = "7.0", features = ["chrono"] }
jsonwebtoken = "9"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
# SQLite is compiled in via sqlx-sqlite -> libsqlite3-sys bundled mode for single-executable
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "json", "macros", "migrate"] }
argon2 = "0.5"
ring = "0.17"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem", "arithmetic"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
extism = "1.13"
semver = "1"
metrics = "0.24"
security-framework = "3"
security-framework-sys = "2"
keyring = { version = "3", default-features = false, features = ["windows-native"] }
wiremock = "0.6"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.ravif]
opt-level = 3

[profile.dev.package.rav1e]
opt-level = 3

[profile.dev.package.fast_image_resize]
opt-level = 3
