[package]
name = "scryer-application"
version = "0.0.6"
edition = "2021"

[dependencies]
scryer-domain = { path = "../scryer-domain" }
scryer-rules = { path = "../scryer-rules" }
scryer-mediainfo = { path = "../scryer-mediainfo" }
jsonwebtoken = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
argon2 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "zstd", "deflate"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
metrics = { workspace = true }
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
