[package]
name = "scryer-application"
version = "0.8.9"
edition.workspace = true

[dependencies]
scryer-domain = { path = "../scryer-domain" }
scryer-release-parser = { path = "../scryer-release-parser" }
scryer-rules = { path = "../scryer-rules" }
scryer-mediainfo = { path = "../scryer-mediainfo" }
jsonwebtoken = { workspace = true }
rand_core = { workspace = true }
argon2 = { workspace = true }
ring = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "zstd", "deflate"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
metrics = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
