[package]
name = "scryer-application"
version = "0.9.10"
edition.workspace = true

[dependencies]
scryer-domain = { path = "../scryer-domain" }
scryer-release-parser = { path = "../scryer-release-parser" }
scryer-rules = { path = "../scryer-rules" }
scryer-mediainfo = { path = "../scryer-mediainfo" }
jsonwebtoken = { workspace = true }
rand_core = { workspace = true }
argon2 = { workspace = true }
ring = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "zstd", "deflate"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
metrics = { workspace = true }
weaver-rar = { git = "https://github.com/scryer-media/weaver.git", tag = "weaver-v0.1.29" }
sevenz-rust2 = { version = "0.20", features = ["aes256", "bzip2", "deflate", "zstd"] }
alass-core = "2.0.0"
chardetng = "0.1"
encoding_rs = "0.8"
symphonia = { version = "0.5", features = ["aac", "flac", "mp3", "vorbis", "pcm", "mkv", "isomp4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
