[package]
name = "scryer-infrastructure"
version = "0.9.14"
edition.workspace = true

[dependencies]
scryer-domain = { path = "../scryer-domain" }
scryer-application = { path = "../scryer-application" }
scryer-release-parser = { path = "../scryer-release-parser" }
async-trait = { workspace = true }
base64 = "0.22"
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "gzip", "brotli", "zstd", "deflate"] }
p256 = { workspace = true }
rcgen = "0.13"
ring = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
metrics = { workspace = true }
x509-parser = "0.16"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
image = { version = "0.25", default-features = false, features = ["avif", "jpeg", "png", "webp"] }
ravif = { version = "0.13", features = ["threading"] }
fast_image_resize = "5"
kamadak-exif = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }
security-framework-sys = { workspace = true }
# security-framework-sys is v2 (re-exported by security-framework v3)

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true }

[dev-dependencies]
scryer-rules = { path = "../scryer-rules" }
