[package]
name = "scryer-infrastructure"
version = "0.10.2"
edition.workspace = true

[dependencies]
scryer-domain = { path = "../scryer-domain" }
scryer-application = { path = "../scryer-application" }
scryer-release-parser = { path = "../scryer-release-parser" }
async-trait = { workspace = true }
base64 = "0.22"
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
quick-xml = { workspace = true }
zstd = "0.13"
flate2 = "1"
async-compression = { version = "0.4", features = ["tokio", "zstd", "gzip"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "query", "rustls", "gzip", "brotli", "zstd", "deflate", "stream"] }
p256 = { workspace = true }
rcgen = "0.14"
ring = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
metrics = { workspace = true }
x509-parser = "0.18"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt", "io"] }
image = { version = "0.25", default-features = false, features = ["avif", "jpeg", "png", "webp"] }
ravif = { version = "0.13", features = ["threading"] }
fast_image_resize = "6"
kamadak-exif = "0.6"
filetime = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { workspace = true }
security-framework-sys = { workspace = true }
# security-framework-sys is v2 (re-exported by security-framework v3)

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true }

[dev-dependencies]
scryer-rules = { path = "../scryer-rules" }
tempfile = "3"
