[package]
name = "scryer-mediainfo"
version = "0.9.13"
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Container parsers
matroska-demuxer = "0.7"
mp4parse = "0.17"
riff = "2"

# Codec bitstream parsers
scuffle-h264 = "0.2"
scuffle-h265 = "0.2"
bytes = "1"
