[package]
name = "scryer-mock-apis"
version = "0.9.12"
edition.workspace = true

[[bin]]
name = "scryer-mock-apis"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
