[package]
name = "scryer-plugins"
version = "0.8.8"
edition.workspace = true

[dependencies]
scryer-application = { path = "../scryer-application" }
scryer-domain = { path = "../scryer-domain" }
scryer-rules = { path = "../scryer-rules" }
extism = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
