[package]
name = "scryer-plugins"
version = "0.9.2"
edition.workspace = true

[dependencies]
scryer-application = { path = "../scryer-application" }
scryer-domain = { path = "../scryer-domain" }
scryer-rules = { path = "../scryer-rules" }
extism = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
