[package]
name = "scryer"
version = "0.8.1"
edition = "2021"

[dependencies]
scryer-application = { path = "../scryer-application" }
scryer-domain = { path = "../scryer-domain" }
scryer-rules = { path = "../scryer-rules" }
scryer-interface = { path = "../scryer-interface" }
scryer-infrastructure = { path = "../scryer-infrastructure" }
scryer-plugins = { path = "../scryer-plugins" }
async-graphql = { workspace = true }
async-graphql-axum = { version = "7.0" }
axum = { version = "0.8", features = ["macros", "http1", "http2", "json", "ws"] }
futures-util = "0.3"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full"] }
http = "1.1"
dotenvy = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
percent-encoding = "2"
toml = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
wiremock = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "zstd", "deflate"] }
tempfile = "3"
